# muparserx

./: .gitignore  CHANGELOG  CMakeLists.txt  CMakeSettings.json  LICENSE  License.md  License.txt  Makefile  Readme.md  Readme.txt  cmake_install.cmake  muparserx.in.pc  muparserx.pc  muparserx.pri  muparserxConfigVersion.cmake
.clusterfuzzlite/: Dockerfile  build.sh  parser_fuzzer.cpp
.github/workflows/: basic.yml  cflite_pr.yml
VS2010/: muparserx.vcxproj
cmake/: muparserxConfigVersion.in.cmake
doc/custom/: footer.html  licence.txt
parser/: Lib_Parser.vcproj  mpDefines.h  mpError.cpp  mpError.h  mpFuncCmplx.cpp  mpFuncCmplx.h  mpFuncCommon.cpp  mpFuncCommon.h  mpFuncMatrix.cpp  mpFuncMatrix.h  mpFuncNonCmplx.cpp  mpFuncNonCmplx.h  mpFuncStr.cpp  mpFuncStr.h  mpFwdDecl.h  mpICallback.cpp  mpICallback.h  mpIOprt.cpp  mpIOprt.h  mpIOprtBinShortcut.cpp  mpIOprtBinShortcut.h  mpIPackage.cpp  mpIPackage.h  mpIPrecedence.h  mpISCOprt.cpp  mpISCOprt.h  mpIToken.cpp  mpIToken.h  mpIValReader.cpp  mpIValReader.h  mpIValue.cpp  mpIValue.h  mpIfThenElse.cpp  mpIfThenElse.h  mpMatrix.h  mpMatrixError.h  mpOprtBinAssign.cpp  mpOprtBinAssign.h  mpOprtBinCommon.cpp  mpOprtBinCommon.h  (+53 more)
sample/: Example.sln  Example.vcxproj  Example.vcxproj.filters  example.cpp  timer.cpp
trunk/: Makefile  Readme.txt
trunk/doc/: Doxyfile  doxyfile.dox
trunk/doc/custom/: Main.txt
trunk/parser/: mpDefines.h  mpError.cpp  mpError.h  mpFuncCmplx.cpp  mpFuncCmplx.h  mpFuncCommon.cpp  mpFuncCommon.h  mpFuncMatrix.cpp  mpFuncMatrix.h  mpFuncStr.cpp  mpFuncStr.h  mpFwdDecl.h  mpICallback.cpp  mpICallback.h  mpIOprt.cpp  mpIOprt.h  mpIPackage.cpp  mpIToken.cpp  mpIToken.h  mpIValReader.cpp  mpIValReader.h  mpIValue.cpp  mpIValue.h  mpIfThenElse.cpp  mpIfThenElse.h  mpMatrix.h  mpMatrixError.h  mpOprtBinAssign.h  mpOprtBinCommon.cpp  mpOprtBinCommon.h  mpOprtCmplx.cpp  mpOprtIndex.cpp  mpOprtIndex.h  mpOprtMatrix.cpp  mpOprtMatrix.h  mpOprtNonCmplx.cpp  mpOprtNonCmplx.h  mpOprtPostfixCommon.cpp  mpOprtPostfixCommon.h  mpPackageCmplx.cpp  (+36 more)
trunk/sample/: example.cpp
trunk/value_test/: muMatrixTest.h  value_test.cpp
trunk/vs10/: muparserX.sln  muparserx.vcxproj  muparserx.vcxproj.filters
trunk/vs8/: muparserx.vcproj
value_test/: muMatrix.h  muMatrixTest.cpp  suSortPred.h  value_test.ncb  value_test.sln.old  value_test.suo.old  value_test.vcxproj
vs8/: muparserX.sln  muparserx.vcproj
wiki/: Background.wiki  Benchmarks.wiki  Classes.wiki  ExpressionSyntax.wiki  Extending.wiki  History.wiki  Introduction.wiki  Motivation.wiki  TableOfContents.wiki  Using.wiki
